--- a/project.json
+++ b/project.json
@@ -3,27 +3,33 @@
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.5.4]",
-    "UiPath.Mail.Activities": "[1.4.1]",
     "UiPath.Python.Activities": "1.1.6863.33404",
-    "UiPath.System.Activities": "[19.4.1]",
-    "UiPath.UIAutomation.Activities": "[19.4.2]"
+    "UiPath.System.Activities": "[19.10.1]",
+    "UiPath.UIAutomation.Activities": "[19.10.1]"
   },
-  "schemaVersion": "3.2",
-  "studioVersion": "19.4.4.0",
+  "webServices": [],
+  "schemaVersion": "4.0",
+  "studioVersion": "19.10.1.0",
   "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
     "isPausable": true,
+    "requiresUserInteraction": true,
+    "supportsPersistence": false,
     "excludedLoggedData": [
       "Private:*",
       "*password*"
-    ]
+    ],
+    "executionType": "Workflow"
   },
-  "projectType": "Workflow",
-  "libraryOptions": {
-    "includeOriginalXaml": false,
-    "privateWorkflows": []
+  "designOptions": {
+    "projectProfile": "Developement",
+    "outputType": "Process",
+    "libraryOptions": {
+      "includeOriginalXaml": false,
+      "privateWorkflows": []
+    },
+    "fileInfos": []
   },
-  "webServices": []
+  "expressionLanguage": "VisualBasic"
 }
